--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/scrum.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#0b0a08" />
     <title>SCRUM - Agent Lobby</title>
   </head>
-  <body class="bg-slate-900">
+  <body class="bg-[#0b0a08] text-stone-100" style="background-color: #0b0a08;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
